leaving search transitions out for now, fixed header z-index and search scss refactor

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -75,15 +75,19 @@ a:visited {
   margin: 18rem 1rem 0 1rem;
   background-color: #fff4df;
   width: calc(100% - 2rem);
-  max-height: 15rem;
+  opacity: 0;
   overflow-y: scroll;
-  transition: all 0.5s;
-  z-index: 1;
+  overflow-x: hidden;
 }
+.search-results__list.active {
+  max-height: 15rem;
+  opacity: 1;
+}
+
 .search__item {
   display: inline-block;
   margin: 0 0.5rem;
-  padding: 0.5rem 0;
+  padding: 1rem 0;
   width: 100%;
 }
 .search__item:hover {
@@ -96,7 +100,7 @@ a:visited {
   color: #084c61;
 }
 .search__text--brand {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: 600;
   margin-right: 1rem;
@@ -107,7 +111,6 @@ a:visited {
 }
 .search__text--format, .search__text--type, .search__text--iso {
   font-size: 1.25rem;
-  padding: 0.25rem;
   margin-right: 2rem;
   color: #0d7da0;
 }
@@ -128,6 +131,7 @@ a:visited {
   justify-content: space-around;
   background-color: #fff;
   transition: all 0.5s cubic-bezier(0.6, 0.04, 0.5, 1);
+  z-index: 1;
 }
 .header.open {
   background-color: #ffc857;
