--- a/src/sass/components/_searchbar.scss
+++ b/src/sass/components/_searchbar.scss
@@ -35,13 +35,13 @@
     margin: 18rem 1rem 0 1rem;
     background-color: a.$color-yellow-lightest;
     width: calc(100% - 2rem); //width of parent - padding of input
-    max-height: 15rem;
+    opacity: 0;
     overflow-y: scroll;
-    transition: all 0.5s;
-    z-index: 1;
+    overflow-x: hidden;
 
     &.active {
-        //TRANSITIONS BITCH
+        max-height: 15rem;
+        opacity: 1;
     }
 
 }
@@ -49,7 +49,7 @@
 .search__item {
     display: inline-block;
     margin: 0 .5rem;
-    padding: .5rem 0;
+    padding: 1rem 0;
     width: 100%;
     
     &:hover {
@@ -63,7 +63,7 @@
     color: a.$color-blue-darker;
 
     &--brand {
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         text-transform: uppercase;
         font-weight: 600;
         margin-right: 1rem;
@@ -74,7 +74,6 @@
     }
     &--format, &--type, &--iso {
         font-size: 1.25rem;
-        padding: .25rem;
         margin-right: 2rem;
         color: a.$color-blue-primary;
     }
